Fix biomarkers scroll on firefox

--- a/client/src/app/edit-layout/right-menu/biomarkers/biomarkers.component.scss
+++ b/client/src/app/edit-layout/right-menu/biomarkers/biomarkers.component.scss
@@ -28,7 +28,8 @@ mat-tree {
     color: $font-color-gray;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-color: transparent;
     box-shadow: 0px 0px 0px !important;
 }
